--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Hi, I'm Joel a software engineer from Brazil.">
     <meta name="keywords" content="Joel Souza, software engineer, Brazil">
     <meta name="author" content="Joel Souza">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lekton:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-38229555-1"></script>
     <script>
