--- a/index.html
+++ b/index.html
@@ -1,43 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Joel Souza</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hi, I'm Joel a software engineer from Brazil.">
-    <meta name="keywords" content="Joel Souza, software engineer, Brazil">
-    <meta name="author" content="Joel Souza">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lekton:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-38229555-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-38229555-1');
-    </script>
-</head>
-<body>
-    <main>
-        <article class="main">
-            <section class="hero">
-                <header>
-                    <h1>Hi, I'm Joel</h1>
-                    <p class="subtitle">a software engineer from Brazil.</p>
-                </header>
-            </section>
-            <section class="intro">
-                <p>
-                    I have been a passionate and interdisciplinary developer <a href="https://www.linkedin.com/in/joel-ssouza/" target="_blank">since 2007</a>, 
-                    working with diverse fields such as media, education, and drone racing.
-                </p>
-                <p>
-                    I am currently learning the art of balancing family, work, and focus in the midst of the daily hustle.
-                </p>
-                <nav><a href="mailto:hire@joelsouza.com">Hire me</a></nav>
-            </section>
-        </article>
-    </main>
-</body>
+    <head>
+        <title>Joel Souza</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Hi, I'm Joel a software engineer from Brazil."
+        />
+        <meta name="keywords" content="Joel Souza, software engineer, Brazil" />
+        <meta name="author" content="Joel Souza" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lekton:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="/static/styles.css" />
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-38229555-1"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "UA-38229555-1");
+        </script>
+    </head>
+    <body>
+        <main>
+            <article class="main">
+                <section class="hero">
+                    <header>
+                        <h1>Hi, I'm Joel</h1>
+                        <p class="subtitle">a software engineer from Brazil.</p>
+                    </header>
+                </section>
+                <section class="intro">
+                    <p>
+                        I have been a passionate and interdisciplinary developer
+                        <a
+                            href="https://www.linkedin.com/in/joel-ssouza/"
+                            target="_blank"
+                            >since 2007</a
+                        >, working with diverse fields such as media, education,
+                        and drone racing.
+                    </p>
+                    <p>
+                        I am currently learning the art of balancing family,
+                        work, and focus in the midst of the daily hustle.
+                    </p>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="/today.html">Today</a>
+                            </li>
+                            <li>
+                                <a href="mailto:hire@joelsouza.com">Hire me</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </section>
+            </article>
+        </main>
+    </body>
 </html>
