Fix /today route

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="/today.html">Today</a>
+                                <a href="/today">Today</a>
                             </li>
                             <li>
                                 <a href="mailto:hire@joelsouza.com">Hire me</a>
